workshop04/minio.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-ns
  labels:
    app: minio
    name: minio-ns

---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minio-ns
  labels:
    app: minio
    name: minio-hsvc
spec:
  clusterIP: None
  selector:
    app: minio
    name: minio-po
  ports:
    - name: minio-data
      port: 9000
      targetPort: 9000
    - name: minio-console
      port: 9090
      targetPort: 9090

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minio-ns
  labels:
    app: minio
    name: minio-sts
spec:
  replicas: 4
  serviceName: minio-hsvc
  selector:
    matchLabels:
      app: minio
      name: minio-po
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data-vol
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: do-block-storage
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      name: minio-po
      labels:
        app: minio
        name: minio-po
    spec:
      # initContainers run and terminate before the containers can run
      # use initContainer to change the permission
      containers:
        - name: minio-container
          image: bitnami/minio:2023.3.24
          imagePullPolicy: IfNotPresent
          command:
            - minio
            - server
            - --address=:9000
            - --console-address=:9090
            - http://minio-sts-{0...3}.minio-hsvc.minio-ns.svc.cluster.local/data
          ports:
            - name: data-port
              containerPort: 9000
            - name: console-port
              containerPort: 9000
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
          volumeMounts:
            - name: data-vol
              mountPath: /data
