workshop04/ingress_lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio-ns
  labels:
    app: minio
    name: minio-svc
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
    - name: server
      port: 9000
      targetPort: 9000
    - name: console
      port: 9090
      targetPort: 9090

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  namespace: minio-ns
  labels:
    app: minio
    name: minio-ing
spec:
  ingressClassName: nginx
  rules:
    - host: data-139.59.223.83.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-svc
                port:
                  # name: data-port
                  number: 9000
    - host: console-139.59.223.83.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-svc
                port:
                  # name: console-port
                  number: 9090
